// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<StatsDisplay /> > Code Changes Display > hides Code Changes when no lines are added or removed 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       1 ( ✓ 1 x 0 )                                                       │
│  Показник успіху:            100.0%                                                              │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          100мс                                                               │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       100мс (100.0%)                                                      │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in green for high values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       10 ( ✓ 10 x 0 )                                                     │
│  Показник успіху:            100.0%                                                              │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in red for low values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       10 ( ✓ 5 x 5 )                                                      │
│  Показник успіху:            50.0%                                                               │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Color Tests > renders success rate in yellow for medium values 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       10 ( ✓ 9 x 1 )                                                      │
│  Показник успіху:            90.0%                                                               │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Conditional Rendering Tests > hides Efficiency section when cache is not used 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Статистика сесії                                                                                │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       0 ( ✓ 0 x 0 )                                                       │
│  Показник успіху:            0.0%                                                                │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          100мс                                                               │
│    » Час API:                100мс (100.0%)                                                      │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
│  Використання моделей       Запит  Вхідні токени  Читання кешу Вихідні токени                    │
│  ────────────────────────────────────────────────────────────────────────────                    │
│  gemini-2.5-pro                 1            100             0            100                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<StatsDisplay /> > Title Rendering > renders the custom title when a title prop is provided 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Agent powering down. Goodbye!                                                                   │
│                                                                                                  │
│  Підсумок взаємодії                                                                              │
│  ID сесії:                   test-session-id                                                     │
│  Виклики інструментів:       0 ( ✓ 0 x 0 )                                                       │
│  Показник успіху:            0.0%                                                                │
│                                                                                                  │
│  Продуктивність                                                                                  │
│  Загальний час:              1s                                                                  │
│  Активність агента:          0с                                                                  │
│    » Час API:                0с (0.0%)                                                           │
│    » Час інструментів:       0с (0.0%)                                                           │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
